# power-bi-template

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY_HEALTHCARE.md  KNOWLEDGE-REGISTER.md  Project.Template.pbip  README.md  README_NEW.md  REQUIREMENTS-TRACEABILITY.md  prompts-power-bi-template.md
Project.Template.Report/definition/: report.json
Project.Template.SemanticModel/definition/: model.tmdl
assets/: .$pbip-moat-narrative.drawio.bkp  pbip-moat-narrative.drawio
config/: automation_config.yaml  sample_module_config.yaml
config/examples/: README_hospital_er.md  adidas_sales.yaml  hospital_er.yaml
custom-visuals/: DATASHRINK-VISUAL-FAMILY.md
custom-visuals/seffMonthlyVarianceWaterfall/: README.md  capabilities.json  package-lock.json  package.json  pbiviz.json  webpack.statistics.prod.html
docs/: 01_ProjectOverview.md  02_DataSources.md  03_Ownership.md  04_RefreshSchedule.md  05_SemanticModel.md  06_Security_RLS.md  07_ChangeLog.md  08_BusinessGlossary.md  09_Dependencies.md  10_TestingValidation.md  12_DashboardRecipes.md  13_DashboardRecipes_Hospital_ER.md
docs/advanced/: 11_VisualModularity.md  AUTOMATION_CAPABILITY_VALIDATION.md  BUSINESS_CASE_EXECUTIVE_APPROVAL.md  CHANGE_MANAGEMENT.md  README.md  (+4 more)
mcp/: README.md  pyproject.toml
mcp/data_shrink_mcp/: __init__.py  analyzer_bridge.py  baseline.py  estate.py  generate.py  microsoft_bridge.py  remediate.py  rules.py  server.py  validate.py
mcp/tests/: test_baseline.py  test_generate.py  test_reflect.py  test_remediate.py  test_validate.py
modules/: README.md
scripts/: init-project.sh
(+52 files in other folders)
