[project]
name = "data-shrink-mcp"
version = "0.0.1"
description = "The Data Shrink MCP server — an aggregator over Microsoft's Power BI MCP servers that adds reflection, scoring, and governed generation. The Engine Runtime."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "pyyaml>=6.0",
]

[project.scripts]
data-shrink-mcp = "data_shrink_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_shrink_mcp"]
